# handwriting_ocr

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
handwriting_ocr/: app.py  baidu.py  xfyun.py
handwriting_ocr/src/: handwriting_ocr.py
